# ml-equity-backtester

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
config/: 2025-10_test_universe_N=15_config.yaml  DEMO15_config.yaml  DEMO_synth_config.yaml  run.yaml  run2.yaml
config/universes/: 2025-09_additional_companies.csv  2025-09_default_universe.csv  2025-09_default_universe_simple.txt  2025-09_total_universe_dividend_split_safe.csv  2025-10_DEMO15.csv
notebooks/: strategy_comparison.ipynb  universe_visualisation.ipynb
notebooks/insights/: 01_enet_in_single_gbm_universe.ipynb  01_gbm_regimes_overview.ipynb
notebooks/theory/: 01_gbm.ipynb  02_ElasticNet.ipynb
notebooks/tutorials/: 01_simulating_universes.ipynb
scripts/: benchmarks.py  demo15_elasticnet_topn.py  demo_synth_elasticnet_topn.py  download_data.py  feature_engineer.py
src/mlbt/: api_key.py  backtest_bh.py  backtest_topn.py  buy_and_hold.py  calendar.py  features.py  io.py  labels.py  load_prices.py  load_universe.py  log_utils.py  metrics.py  monthly_rebalance.py  outputs.py  panel.py  strategy_result.py  timing.py  trainer.py  universe.py  utils.py  visualisation.py  yaml_io.py
src/mlbt/analysis/: __init__.py  strategy_analysis.py
src/mlbt/backtest_engines/: __init__.py  backtest_bh.py  backtest_mr.py  backtest_topn.py
src/mlbt/notebooks/: __init__.py  demo15.py  demo_helpers.py  demo_synth.py  demo_validation.py  demonstration.py  runners.py
src/mlbt/pipelines/: demo15.py  demo_helpers.py  demo_synth.py  full_pipeline.py  ml_elasticnet_topn.py  random_n.py  topn_runner.py  (+1 more)
(+19 files in other folders)
