[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlbt"
version = "0.1.0"
description = "Utilities for the ML equity backtester"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kevin", email = "vkkleinqt@gmail.com" }]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mlbt*"]
